servicescluster/workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    topology: servicescluster
    istio.io/dataplane-mode: ambient
---
apiVersion: v1
kind: Service
metadata:
  name: webapi
  labels:
    topology: servicescluster
    app: webapi
    istio.io/global: "true"
    istio.io/use-waypoint: waypoint
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: webapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-v2
  labels:
    topology: servicescluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
      version: v2
  template:
    metadata:
      labels:
        app: webapi
        version: v2
    spec:
      serviceAccountName: webapi
      containers:
      - name: webapi
        image: binarydad/webapi
        ports:
        - containerPort: 8080
        resources: {}
