servicescluster/auth-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: webapi-allow-website
  labels:
    topology: servicescluster
spec:
  selector:
    matchLabels:
      app: webapi
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/website
        - cluster.local/ns/default/sa/waypoint
